--- a/src/Pages/WelcomePage/WelcomePage.css
+++ b/src/Pages/WelcomePage/WelcomePage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    background-color: blueviolet;
+    background-color: whitesmoke;
     background-position: center;
     background-size: cover;
     height: 100vh;
